@@ -1,3 +1,9 @@
+Mon Dec 14 03:36:20 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
+
+	* eval.c (method_inspect, method_name, mnew): Bug fix when
+	  method created from an alias.
+	  Based on a patch by Peter Vanbroekhoven [ruby-core:22040]
+
 Mon Dec 14 03:21:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* eval.c (call_trace_func): remove the trace hook if any exception
